--- a/package.json
+++ b/package.json
@@ -5,22 +5,27 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html -p 3000",
-    "build": "parcel build src/index.html -d build --public-url ./"
+    "build": "parcel build src/index.html -d build --public-url ./",
+    "cy:open": "cypress open",
+    "e2e": "start-server-and-test start http://localhost:3000 cy:open"
   },
   "author": "Pedro Gomes <pedrouid@protonmail.com>",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.17.1",
     "hyperapp": "^1.0.1",
-    "parcel-bundler": "^1.4.1"
+    "parcel-bundler": "^1.7.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
     "babel-plugin-transform-h-jsx": "^1.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "cypress": "2.1.0",
+    "cypress-parcel-preprocessor": "1.0.0",
     "eslint": "^4.14.0",
     "eslint-config-babel": "^7.0.2",
-    "eslint-plugin-flowtype": "^2.40.1"
+    "eslint-plugin-flowtype": "^2.40.1",
+    "start-server-and-test": "1.1.0"
   }
 }
